# projet_j

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: two_sum.hpp
scripts/: deploy_run.sh  sync-pi-sysroot.sh
src/: main.cpp  two_sum.cpp
tests/: test_two_sum.cpp  test_two_sum_no_input.cpp  test_two_sum_no_result.cpp  test_two_sum_nominal.cpp  test_two_sum_single_element.cpp
toolchains/: aarch64-linux-gnu.cmake
